# mkdocs-carve

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: mkdocs.yml
example/docs/: about.crv  index.crv  markdown-page.md
example/docs/guide/: intro.crv
mkdocs_carve/: __init__.py  plugin.py
tests/: test_build.py  test_plugin.py
